--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Program Files\\Java\\jre1.8.0_171","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"C:\\Users\\이승주\\Documents\\객체\\2017440103_이승주\\2018.05.15_이벤트","type":"PROJECT","hints":{"PROJECT_NAME":"2018.05.15_이벤트"}},"ABSENT"]]
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_171","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
